--- a/src/Presentation/SmartStore.Web/Views/Catalog/Partials/OffCanvasCompare.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Catalog/Partials/OffCanvasCompare.cshtml
@@ -62,6 +62,8 @@
                     </div>
                 </div>
             }
+
+            @{ Html.RenderWidget("offcanvas_compare_items_after"); }
         </div>
     }
 </div>
