--- a/src/Presentation/SmartStore.Web/Views/ShoppingCart/Partials/OffCanvasWishlist.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/ShoppingCart/Partials/OffCanvasWishlist.cshtml
@@ -132,6 +132,8 @@
                     </div>
                 </div>
             }
+
+            @{ Html.RenderWidget("offcanvas_wishlist_items_after"); }
         </div>
     }
 </div>
