--- a/src/Presentation/SmartStore.Web/Views/Product/Partials/Product.Offer.Price.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Product/Partials/Product.Offer.Price.cshtml
@@ -96,6 +96,9 @@
 					</div>
 				}
 			}
+            
+            @{ Html.RenderWidget("productdetails_add_info{0}".FormatWith(isBundleItem ? "_bundle" : "")); }
+
 		</div>
 
 		<!-- Tier prices -->
