--- a/src/Presentation/SmartStore.Web/Views/Shared/Layouts/_Document.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Shared/Layouts/_Document.cshtml
@@ -5,9 +5,9 @@
 @{
 	var currentUICulture = System.Threading.Thread.CurrentThread.CurrentUICulture;
 
-	var localizationService = EngineContext.Current.Resolve<ILocalizationService>();
+	//var localizationService = EngineContext.Current.Resolve<ILocalizationService>();
 
-	var contentRoot = "~/Themes/Flex/Content/";
+	//var contentRoot = "~/Themes/Flex/Content/";
 	var cssRoot = "~/Themes/Flex/Content/css/";
 	var jsRoot = "~/Themes/Flex/Scripts/";
 	var bootstrapJsRoot = "~/Themes/Flex/Content/bs4/js/";
