Simple Megamenu: Minor bugfix & optimization

--- a/src/Presentation/SmartStore.Web/Themes/Flex/Content/_megamenu.scss
+++ b/src/Presentation/SmartStore.Web/Themes/Flex/Content/_megamenu.scss
@@ -318,6 +318,8 @@ $megamenu-zindex-base:          ($zindex-dropdown - 20);
 
 // exclusive for .simple
 .megamenu-dropdown-container.simple {
+    position: initial;
+    
     .dropdown-menu {
         margin-top: -1px;
         min-width: 250px;
