--- a/src/Presentation/SmartStore.Web/Themes/Flex/Content/_product.scss
+++ b/src/Presentation/SmartStore.Web/Themes/Flex/Content/_product.scss
@@ -1,7 +1,7 @@
 /// <reference path="_variables.scss" />
 /// <reference path="bs4/scss/bootstrap.scss" />
 
-$pd-offer-bg:                   $gray-lightest;
+$pd-offer-bg:                   $product-detail-addtocart-box-bg;
 $pd-price-color:                $product-price-color;
 $pd-price-offer-color:          $brand-danger;
 $pd-line-height:                1.3;
