Added font size variables to theme configuration

--- a/src/Presentation/SmartStore.Web/Themes/Flex/Views/Shared/ConfigureTheme.cshtml
+++ b/src/Presentation/SmartStore.Web/Themes/Flex/Views/Shared/ConfigureTheme.cshtml
@@ -76,6 +76,13 @@
         @ThemeVarEditor("headings-color")
         @ThemeVarEditor("lead-font-weight")
 
+        @ThemeVarEditor("font-size-h1", "Heading Sizes")
+        @ThemeVarEditor("font-size-h2")
+        @ThemeVarEditor("font-size-h3")
+        @ThemeVarEditor("font-size-h4")
+        @ThemeVarEditor("font-size-h5")
+        @ThemeVarEditor("font-size-h6")
+
         <tr>
             <td colspan="2" class="admin-config-group">
                 <div class="title">Google Fonts</div>
