--- a/src/Presentation/SmartStore.Web/Themes/Flex/Content/_variables.scss
+++ b/src/Presentation/SmartStore.Web/Themes/Flex/Content/_variables.scss
@@ -118,12 +118,12 @@ $line-height-base:              1.5;
 $line-height-sm:                1.5;
 $line-height-lg:                (4 / 3);
 
-$font-size-h1:                  2.5rem;
-$font-size-h2:                  2rem;
-$font-size-h3:                  1.75rem;
-$font-size-h4:                  1.25rem;
-$font-size-h5:                  1rem;
-$font-size-h6:                  $font-size-base;
+$font-size-h1:                  2.5rem !default;
+$font-size-h2:                  2rem !default;
+$font-size-h3:                  1.75rem !default;
+$font-size-h4:                  1.25rem !default;
+$font-size-h5:                  1rem !default;
+$font-size-h6:                  $font-size-base !default;
 $lead-font-size:                1rem;
 $lead-font-weight:              $font-weight-light;
 $small-font-size:               90%;
