Theme configuration: flat searchbox button style

--- a/src/Presentation/SmartStore.Web/Themes/Flex/Views/Shared/ConfigureTheme.cshtml
+++ b/src/Presentation/SmartStore.Web/Themes/Flex/Views/Shared/ConfigureTheme.cshtml
@@ -131,11 +131,12 @@
         @ThemeVarEditor("megamenu-text-color")
         @ThemeVarEditor("megamenu-rotator-bg")
 
-        @ThemeVarEditor("search-button-style", "Searchbox")
-        @ThemeVarEditor("searchbox-bg")
+        @ThemeVarEditor("searchbox-bg", "Searchbox")
         @ThemeVarEditor("searchbox-focus-bg")
         @ThemeVarEditor("searchbox-border-color")
         @ThemeVarEditor("searchbox-border-active-color")
+		@ThemeVarEditor("search-button-style")
+		@ThemeVarEditor("search-button-flat")
         @ThemeVarEditor("searchbox-hit-tag-color")
 
         @ThemeVarEditor("inverse-footer", "Footer")
