Another IE 11 flex grow fix

--- a/src/Presentation/SmartStore.Web/Themes/Flex/Content/_misc.scss
+++ b/src/Presentation/SmartStore.Web/Themes/Flex/Content/_misc.scss
@@ -54,3 +54,13 @@
 	font-weight: bold;
 	background: $gray-lightest;
 }
+
+
+//
+// Hacks
+// -------------------------------------------------
+.ie11 .pd-offer-actions .col,
+.ie11 .offcanvas-cart-footer-row .col {
+    width: auto;
+    -ms-flex-preferred-size: auto;
+}
