Item row in list style product list should not wrap on small devices

--- a/src/Presentation/SmartStore.Web/Themes/Flex/Content/_artlist.scss
+++ b/src/Presentation/SmartStore.Web/Themes/Flex/Content/_artlist.scss
@@ -480,6 +480,10 @@ $art-border-color:              #ddd;
     @include media-breakpoint-down(xs) {
         .art-picture-block { max-width: 30%; }
     }
+
+    .delivery-time {
+        white-space: normal;
+    }
 }
 
 
