--- a/src/Presentation/SmartStore.Web/Themes/Flex/Content/_artlist.scss
+++ b/src/Presentation/SmartStore.Web/Themes/Flex/Content/_artlist.scss
@@ -474,6 +474,13 @@ $art-border-color:              #ddd;
             padding-left: 0;
             padding-top: 1rem;
             width: 100%;
+            /*position: static;*/
+        }
+
+        .art-info-block {
+            // Fix Android default browser layout glitch
+            flex-basis: initial;
+            flex-grow: initial;
         }
     }
 
