--- a/src/Presentation/SmartStore.Web/Views/ShoppingCart/Partials/OrderTotals.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/ShoppingCart/Partials/OrderTotals.cshtml
@@ -129,7 +129,7 @@
 										class="tooltip-toggle remove-gift-card-button"
 										title="@T("Common.Remove")"
 										name="removegiftcard"
-										value="@gc.Id">
+										value="removegiftcard">
 									<i class="fa">×</i>
 								</button>
 							</div>
