AmazonPay: Getting started implementing new features

--- a/src/Plugins/SmartStore.AmazonPay/Views/AmazonPayShoppingCart/MiniShoppingCart.cshtml
+++ b/src/Plugins/SmartStore.AmazonPay/Views/AmazonPayShoppingCart/MiniShoppingCart.cshtml
@@ -2,7 +2,7 @@
 
 <div class="external-checkout-button">
 	<span id="@Model.GetWidgetId">
-		<img src="@Model.ButtonUrl" />
+		@*<img src="@Model.ButtonUrl" />*@
 	</span>
 
 	@{ Html.RenderPartial("ScriptingLoginButton", Model); }
