--- a/src/Plugins/SmartStore.AmazonPay/Views/AmazonPayCheckout/ShippingAddress.cshtml
+++ b/src/Plugins/SmartStore.AmazonPay/Views/AmazonPayCheckout/ShippingAddress.cshtml
@@ -1,12 +1,9 @@
 ﻿@using SmartStore.Web.Models.Checkout;
-
 @model SmartStore.AmazonPay.Models.AmazonPayViewModel
-
 @{
     Layout = "_Checkout";
 
     Html.AddTitleParts(T("PageTitle.Checkout").Text);
-    Html.AddCssFileParts(true, Url.Content("~/Plugins/SmartStore.AmazonPay/Content/smartstore.amazonpay.css"));
 }
 
 @section orderProgress{
@@ -27,7 +24,7 @@
         }
 
 		<div class="amazon-pay-widget clearfix">
-			<div id="@Model.GetWidgetId"></div>
+			<div id="@Model.WidgetId"></div>
 		</div>
 
 		@{ Html.RenderWidget("checkout_shipping_address_middle"); }
@@ -63,7 +60,7 @@
 				onError: function (e) {
 					alert(e.getErrorMessage() + ' (' + e.getErrorCode() + ')');
 				}
-			}).bind('@Model.GetWidgetId');
+			}).bind('@Model.WidgetId');
 		}
 		catch (e) {
 			alert(e.description);
